--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "axios": "^0.27.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "workbox-window": "^6.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
@@ -30,6 +31,7 @@
     "prettier": "2.7.1",
     "typescript": "^4.6.4",
     "vite": "^3.0.7",
-    "vite-plugin-pwa": "^0.12.6"
+    "vite-plugin-pwa": "^0.12.6",
+    "workbox-build": "^6.4.0"
   }
 }
