--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint src/**/*.tsx",
-    "format": "prettier --write src/**/*.tsx"
+    "format": "prettier --write src/**/*.tsx",
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -28,6 +29,7 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.31.7",
+    "jest": "^29.1.2",
     "prettier": "2.7.1",
     "typescript": "^4.6.4",
     "vite": "^3.0.7",
