--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "lint": "eslint src/**/*.tsx",
     "format": "prettier --write src/**/*.tsx",
-    "test": "jest"
+    "test": "vitest"
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -35,6 +35,7 @@
     "typescript": "^4.6.4",
     "vite": "^4.1.1",
     "vite-plugin-pwa": "^0.12.6",
+    "vitest": "^0.30.1",
     "workbox-build": "^6.4.0"
   }
 }
