--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react_vite_battleground",
+  "name": "learning_react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
