--- a/package.json
+++ b/package.json
@@ -14,17 +14,17 @@
   "dependencies": {
     "axios": "^0.27.2",
     "immer": "^10.0.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-router-dom": "^6.4.1",
     "workbox-window": "^6.4.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
-    "@vitejs/plugin-react": "^2.0.1",
+    "@vitejs/plugin-react": "^4.7.0",
     "eslint": "^8.0.1",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.25.2",
@@ -34,8 +34,8 @@
     "jest": "^29.1.2",
     "prettier": "2.7.1",
     "typescript": "^4.6.4",
-    "vite": "^4.1.1",
-    "vite-plugin-pwa": "^0.12.6",
+    "vite": "^5.4.20",
+    "vite-plugin-pwa": "^0.17.5",
     "vitest": "^0.30.1",
     "workbox-build": "^6.4.0"
   }
